# spacereeds-plotter

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  vitest.config.ts
plotter/: main.py  models.py  receiver.py
src/: app.html
src/lib/: schema.ts
src/lib/connection/: ConnectButton.svelte  ConnectionPanel.svelte  LastReceiveTime.svelte  PayloadEntry.svelte  SerialStatusSymbol.svelte  SignalMeter.svelte
src/lib/events/: EventExportButton.svelte  EventImportButton.svelte  EventLine.svelte  EventLog.svelte  ImportanceSymbol.svelte  MockEventReceive.svelte  TestEventButton.svelte  event.svelte.ts  storage.ts
src/lib/mission/: NewMissionButton.svelte  initialize.ts
src/lib/sensors/: ErrorPanel.svelte  ModuleStatusSymbol.svelte  MovementPanel.svelte  NumericSensorPanel.svelte  OrientationPanel.svelte  PositionPanel.svelte  reading.ts
src/lib/serial/: handler.ts  manager.svelte.ts  schema.ts
src/lib/stream/: aggregator.ts  json-parser.ts  validator.ts
src/lib/transformers/: json-parser.ts  validator.ts
src/routes/: +page.svelte
tests/: aggregator.test.ts  json-parser.test.ts  mock-streams.ts  setup.ts  validator.test.ts
